app/src/main/resources/static/css/custom.css
:root{
    --dark-blue: #5C80BC;
    --light-blue: #c9d6ea;
    --custom-yellow: #e8c547;
    --light-grey: #4d5061;
    --dark-grey: #30323d;
}

header{
    background-color: var(--dark-blue);

    .navbar{
        background-color: var(--light-blue);
        margin: auto;
        width: 95vw;
        height: 7vh;
        padding-top: 2vh;
    }

    .meso{
        color: var(--custom-yellow);
    }

    a{
        color: var(--light-grey);
        margin:auto;
    }

    a:hover{
        color: var(--dark-grey);
    }
}

.btn-primary{
    border-radius: 50rem;
    color: var(--dark-grey);
    background-color: var(--custom-yellow);
    border: 0;
}

body{
    background-color: var(--dark-blue);
    font-family: 'Londrina Solid', monospace;
}

.main-rows, .main-rows-profile{
    margin: auto;
    flex-direction: row;
    width: 95vw;
    display: flex;
    gap: 1.5vw;
    justify-content: space-between;
}

.main-rows-profile{
    max-height: 80vh;
}

.light-column {
    background-color: var(--light-blue);
}

.rounded-xl{
    border-radius: .5rem;
}

.dark-column {
    background-color: red;
}

.profile-col{
    width: 32vw;
}

.posts-col{
    width: 70vw;
}

.story-col{
    width: 10vw;
}

.image-col{
    width: 40vw;
}

.desc-col{
    width: 53.5vw;
}

form.new-post-form{
    display: flex;
    gap: 1.5vw;
}

.post-desc{
    background-color: orange;
}

#image-to-post{
    width: 70vh;
    height: 70vh;
    display: block;
    margin: auto;
}

input[type="file"] {
    display: none;
}

.post-image{
    width: 50vw;
    height: 50vw;
}

footer{
    background-color: var(--dark-grey);

    a{
        color: var(--light-blue)
    }

    a:hover{
        color: var(--dark-blue)
    }
}

